tests/fixtures/invalid/index_label_as_type.gcl
// Error: index labels are not type annotations.
pub index M = { A };

param x: M.A = 1.0;
